Fix newsletter in dark mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,10 +20,6 @@ html {
     @apply font-mono text-gray-400 text-sm;
   }
 
-  .gradient {
-    background: linear-gradient(to bottom right, #27ab83, #147d64);
-  }
-
   #carbonads {
     @apply bg-gray-100;
   }
